SONARJAVA-3924 Add quick fixes for S2129 (StringPrimitiveConstructorCheck)